# ontoloom

./: .gitignore  CLAUDE.md  Cargo.toml  ECOSYSTEM.md  LICENSE  README.md  SOUL.md
.github/workflows/: ci.yml  release.yml
docs/: backlog.md
prompts/: 2026-07-01-goal-v0.2.md
src/: assets.rs  export.rs  import.rs  json.rs  main.rs  model.rs  server.rs
tests/fixtures/analyzer-corpus/: calc.rs
tests/harness/: README.md  codemap-harness.js  eshop-hierarchy.ontoloom.json  webmap-h11-harness.js  webmap-h9-harness.js  webmap-harness.js
web/: app.js  codemap.js  index.html  style.css
